Issueid #227199 fix: [storylingo] player names are not visible properly

--- a/src/index.css
+++ b/src/index.css
@@ -84,7 +84,7 @@ code {
   padding: 15px 90px;
   border-radius: 10px;
   color: white;
-  font-family: "Comic Sans MS", "Papyrus";
+  font-family: "Comic Sans MS", "Papyrus", cursive;
   background-color: grey;
   font-size: 25px;
   opacity: 0.9;
@@ -95,8 +95,7 @@ code {
   margin-bottom: 30px;
   padding: 15px 90px;
   border-radius: 10px;
-  /* color: white; */
-  font-family: "Comic Sans MS", "Papyrus";
+  font-family: "Comic Sans MS", "Papyrus", cursive;
   background: rgb(2, 0, 36);
   background: radial-gradient(circle, rgba(2, 0, 36, 1) 0%, rgba(252, 255, 103, 1) 0%, rgba(255, 205, 80, 1) 100%);
   font-weight: 500;
@@ -107,8 +106,6 @@ code {
 
 @font-face {
   font-family: 'Rocher';
-  /* src: url('../../all-games-storyling/src/assets/fontFamily/RocherColorGX.woff2');
-   */
   src: url('./assets/fontFamily/RocherColorGX.woff2');
 }
 
